--- a/book/operating_systems.html
+++ b/book/operating_systems.html
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="roadmap_overview.html"><strong aria-hidden="true">1.</strong> Roadmap Overview</a></li><li class="chapter-item expanded "><a href="operating_systems.html" class="active"><strong aria-hidden="true">2.</strong> Operating Systems</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="roadmap_overview.html"><strong aria-hidden="true">1.</strong> Roadmap Overview</a></li><li class="chapter-item expanded "><a href="operating_systems.html" class="active"><strong aria-hidden="true">2.</strong> Operating Systems</a></li><li class="chapter-item expanded "><a href="digital_systems.html"><strong aria-hidden="true">3.</strong> Digital Systems</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -158,6 +158,9 @@
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
+                            <a rel="next" href="digital_systems.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                                <i class="fa fa-angle-right"></i>
+                            </a>
 
                         <div style="clear: both"></div>
                     </nav>
@@ -169,6 +172,9 @@
                         <i class="fa fa-angle-left"></i>
                     </a>
 
+                    <a rel="next" href="digital_systems.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                        <i class="fa fa-angle-right"></i>
+                    </a>
             </nav>
 
         </div>
