--- a/book/index.html
+++ b/book/index.html
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="roadmap_overview.html" class="active"><strong aria-hidden="true">1.</strong> Roadmap Overview</a></li><li class="chapter-item expanded "><a href="operating_systems.html"><strong aria-hidden="true">2.</strong> Operating Systems</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="roadmap_overview.html" class="active"><strong aria-hidden="true">1.</strong> Roadmap Overview</a></li><li class="chapter-item expanded "><a href="operating_systems.html"><strong aria-hidden="true">2.</strong> Operating Systems</a></li><li class="chapter-item expanded "><a href="digital_systems.html"><strong aria-hidden="true">3.</strong> Digital Systems</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -143,7 +143,8 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="chapter-1"><a class="header" href="#chapter-1">Chapter 1</a></h1>
-<p><a href="mdbook-plantuml-img/44acd8d545fa6bd0cb4e0d37de2f371416f574de.svg"><img src="mdbook-plantuml-img/44acd8d545fa6bd0cb4e0d37de2f371416f574de.svg" alt="" /></a></p>
+<p><a href="mdbook-plantuml-img/f1221a76b0f2437a14be594c54d57c7847dbe619.svg"><img src="mdbook-plantuml-img/f1221a76b0f2437a14be594c54d57c7847dbe619.svg" alt="" /></a></p>
+<p><a href="mdbook-plantuml-img/b5dd64c786092ce8ace285e504f106a0e857351e.svg"><img src="mdbook-plantuml-img/b5dd64c786092ce8ace285e504f106a0e857351e.svg" alt="" /></a></p>
 
                     </main>
 
