--- a/book/print.html
+++ b/book/print.html
@@ -82,7 +82,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="roadmap_overview.html"><strong aria-hidden="true">1.</strong> Roadmap Overview</a></li><li class="chapter-item expanded "><a href="operating_systems.html"><strong aria-hidden="true">2.</strong> Operating Systems</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="roadmap_overview.html"><strong aria-hidden="true">1.</strong> Roadmap Overview</a></li><li class="chapter-item expanded "><a href="operating_systems.html"><strong aria-hidden="true">2.</strong> Operating Systems</a></li><li class="chapter-item expanded "><a href="digital_systems.html"><strong aria-hidden="true">3.</strong> Digital Systems</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -144,7 +144,8 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="chapter-1"><a class="header" href="#chapter-1">Chapter 1</a></h1>
-<p><a href="mdbook-plantuml-img/44acd8d545fa6bd0cb4e0d37de2f371416f574de.svg"><img src="mdbook-plantuml-img/44acd8d545fa6bd0cb4e0d37de2f371416f574de.svg" alt="" /></a></p>
+<p><a href="mdbook-plantuml-img/f1221a76b0f2437a14be594c54d57c7847dbe619.svg"><img src="mdbook-plantuml-img/f1221a76b0f2437a14be594c54d57c7847dbe619.svg" alt="" /></a></p>
+<p><a href="mdbook-plantuml-img/b5dd64c786092ce8ace285e504f106a0e857351e.svg"><img src="mdbook-plantuml-img/b5dd64c786092ce8ace285e504f106a0e857351e.svg" alt="" /></a></p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="operating-systems"><a class="header" href="#operating-systems">Operating Systems</a></h1>
 <p>The OS is a program that manages a computers resources by offering services(cpu time, memory space via file storage, IO operations). </p>
 <ul>
@@ -152,6 +153,9 @@
 <li>OS interfaces</li>
 <li>Memory management</li>
 </ul>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="digital-systems"><a class="header" href="#digital-systems">Digital Systems</a></h1>
+<p>https://austinmorlan.com/posts/8bit_breadboard_fpga/    -&gt; build an 8-bit CPU
+https://www.youtube.com/playlist?list=PLowKtXNTBypGqImE405J2565dvjafglHU -&gt; Ben eater 8-bit breadboard computer</p>
 
                     </main>
 
