correct fundamentals prerequisites

--- a/book/print.html
+++ b/book/print.html
@@ -143,8 +143,13 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="chapter-1"><a class="header" href="#chapter-1">Chapter 1</a></h1>
-<p><a href="mdbook-plantuml-img/25131108b26646ea84cde847768d51ef69dbd989.svg"><img src="mdbook-plantuml-img/25131108b26646ea84cde847768d51ef69dbd989.svg" alt="" /></a></p>
+                        <h1 id="roadmap-overview"><a class="header" href="#roadmap-overview">Roadmap Overview</a></h1>
+<p><a href="mdbook-plantuml-img/16dae026a2fe946f3f8dd82d363c7804b7a2a377.svg"><img src="mdbook-plantuml-img/16dae026a2fe946f3f8dd82d363c7804b7a2a377.svg" alt="" /></a></p>
+<p>What is the recommended usage of this roadmap?</p>
+<ol>
+<li>Complete the Fundamentals, this is knowledge that will be the pillar for anything you may end up working on as an Embedded Developer and even most of it applies to other engineering branches.</li>
+<li>Select one Track and one Industry that catches your attention and start getting familiarized with the topics inside of both, for example: My goal is to learn about Embedded Software track in the Automotive Industry, If you were to select gateways then you could become proeficient in handling and passing data between two components.</li>
+</ol>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="operating-systems"><a class="header" href="#operating-systems">Operating Systems</a></h1>
 <p>The OS is a program that manages a computers resources by offering services(cpu time, memory space via file storage, IO operations). </p>
 <ul>
