--- a/book/Fundamentals.html
+++ b/book/Fundamentals.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Roadmap Overview - Embedded Developer Roadmap</title>
+        <title>Fundamentals - Embedded Developer Roadmap</title>
 
 
         <!-- Custom HTML head -->
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="roadmap_overview.html" class="active">Roadmap Overview</a></li><li class="chapter-item expanded "><a href="Fundamentals.html"><strong aria-hidden="true">1.</strong> Fundamentals</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Fundamentals/operating_systems.html"><strong aria-hidden="true">1.1.</strong> Operating Systems</a></li><li class="chapter-item expanded "><a href="Fundamentals/digital_systems.html"><strong aria-hidden="true">1.2.</strong> Digital Systems</a></li></ol></li><li class="chapter-item expanded "><a href="Tracks.html"><strong aria-hidden="true">2.</strong> Tracks</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Tracks/embedded_software.html"><strong aria-hidden="true">2.1.</strong> Embedded software</a></li></ol></li><li class="chapter-item expanded "><a href="Industry_Applications.html"><strong aria-hidden="true">3.</strong> Industry Applications</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Industry/Aerospace.html"><strong aria-hidden="true">3.1.</strong> Aerospace</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Industry/drive_by_wire.html"><strong aria-hidden="true">3.1.1.</strong> Drive by Wire</a></li></ol></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="roadmap_overview.html">Roadmap Overview</a></li><li class="chapter-item expanded "><a href="Fundamentals.html" class="active"><strong aria-hidden="true">1.</strong> Fundamentals</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Fundamentals/operating_systems.html"><strong aria-hidden="true">1.1.</strong> Operating Systems</a></li><li class="chapter-item expanded "><a href="Fundamentals/digital_systems.html"><strong aria-hidden="true">1.2.</strong> Digital Systems</a></li></ol></li><li class="chapter-item expanded "><a href="Tracks.html"><strong aria-hidden="true">2.</strong> Tracks</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Tracks/embedded_software.html"><strong aria-hidden="true">2.1.</strong> Embedded software</a></li></ol></li><li class="chapter-item expanded "><a href="Industry_Applications.html"><strong aria-hidden="true">3.</strong> Industry Applications</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Industry/Aerospace.html"><strong aria-hidden="true">3.1.</strong> Aerospace</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Industry/drive_by_wire.html"><strong aria-hidden="true">3.1.1.</strong> Drive by Wire</a></li></ol></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -142,20 +142,16 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="roadmap-overview"><a class="header" href="#roadmap-overview">Roadmap Overview</a></h1>
-<p><a href="mdbook-plantuml-img/f4f92ef70b58181f6937e81d8ac39bba4d6043db.svg"><img src="mdbook-plantuml-img/f4f92ef70b58181f6937e81d8ac39bba4d6043db.svg" alt="" /></a></p>
-<p>What is the recommended usage of this roadmap?</p>
-<ol>
-<li>Complete the Fundamentals, this is knowledge that will be the pillar for anything you may end up working on as an Embedded Developer and even most of it applies to other engineering branches.</li>
-<li>Select one Track and one Industry that catches your attention and start getting familiarized with the topics inside of both, for example: My goal is to learn about Embedded Software track in the Automotive Industry, If you were to select gateways then you could become proeficient in handling and passing data between two components.</li>
-</ol>
-
+                        
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
+                            <a rel="prev" href="roadmap_overview.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <i class="fa fa-angle-left"></i>
+                            </a>
 
-                            <a rel="next" href="Fundamentals.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="Fundamentals/operating_systems.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -165,8 +161,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
+                    <a rel="prev" href="roadmap_overview.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <i class="fa fa-angle-left"></i>
+                    </a>
 
-                    <a rel="next" href="Fundamentals.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="Fundamentals/operating_systems.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
