--- a/book/Fundamentals/operating_systems.html
+++ b/book/Fundamentals/operating_systems.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Roadmap Overview - Embedded Developer Roadmap</title>
+        <title>Operating Systems - Embedded Developer Roadmap</title>
 
 
         <!-- Custom HTML head -->
@@ -13,21 +13,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
 
-        <link rel="icon" href="favicon.svg">
-        <link rel="shortcut icon" href="favicon.png">
-        <link rel="stylesheet" href="css/variables.css">
-        <link rel="stylesheet" href="css/general.css">
-        <link rel="stylesheet" href="css/chrome.css">
-        <link rel="stylesheet" href="css/print.css" media="print">
+        <link rel="icon" href="../favicon.svg">
+        <link rel="shortcut icon" href="../favicon.png">
+        <link rel="stylesheet" href="../css/variables.css">
+        <link rel="stylesheet" href="../css/general.css">
+        <link rel="stylesheet" href="../css/chrome.css">
+        <link rel="stylesheet" href="../css/print.css" media="print">
 
         <!-- Fonts -->
-        <link rel="stylesheet" href="FontAwesome/css/font-awesome.css">
-        <link rel="stylesheet" href="fonts/fonts.css">
+        <link rel="stylesheet" href="../FontAwesome/css/font-awesome.css">
+        <link rel="stylesheet" href="../fonts/fonts.css">
 
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" href="highlight.css">
-        <link rel="stylesheet" href="tomorrow-night.css">
-        <link rel="stylesheet" href="ayu-highlight.css">
+        <link rel="stylesheet" href="../highlight.css">
+        <link rel="stylesheet" href="../tomorrow-night.css">
+        <link rel="stylesheet" href="../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
 
@@ -35,7 +35,7 @@
     <body>
         <!-- Provide site root to javascript -->
         <script type="text/javascript">
-            var path_to_root = "";
+            var path_to_root = "../";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "light";
         </script>
 
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="roadmap_overview.html" class="active">Roadmap Overview</a></li><li class="chapter-item expanded "><a href="Fundamentals.html"><strong aria-hidden="true">1.</strong> Fundamentals</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Fundamentals/operating_systems.html"><strong aria-hidden="true">1.1.</strong> Operating Systems</a></li><li class="chapter-item expanded "><a href="Fundamentals/digital_systems.html"><strong aria-hidden="true">1.2.</strong> Digital Systems</a></li></ol></li><li class="chapter-item expanded "><a href="Tracks.html"><strong aria-hidden="true">2.</strong> Tracks</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Tracks/embedded_software.html"><strong aria-hidden="true">2.1.</strong> Embedded software</a></li></ol></li><li class="chapter-item expanded "><a href="Industry_Applications.html"><strong aria-hidden="true">3.</strong> Industry Applications</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Industry/Aerospace.html"><strong aria-hidden="true">3.1.</strong> Aerospace</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="Industry/drive_by_wire.html"><strong aria-hidden="true">3.1.1.</strong> Drive by Wire</a></li></ol></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../roadmap_overview.html">Roadmap Overview</a></li><li class="chapter-item expanded "><a href="../Fundamentals.html"><strong aria-hidden="true">1.</strong> Fundamentals</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Fundamentals/operating_systems.html" class="active"><strong aria-hidden="true">1.1.</strong> Operating Systems</a></li><li class="chapter-item expanded "><a href="../Fundamentals/digital_systems.html"><strong aria-hidden="true">1.2.</strong> Digital Systems</a></li></ol></li><li class="chapter-item expanded "><a href="../Tracks.html"><strong aria-hidden="true">2.</strong> Tracks</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Tracks/embedded_software.html"><strong aria-hidden="true">2.1.</strong> Embedded software</a></li></ol></li><li class="chapter-item expanded "><a href="../Industry_Applications.html"><strong aria-hidden="true">3.</strong> Industry Applications</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Industry/Aerospace.html"><strong aria-hidden="true">3.1.</strong> Aerospace</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../Industry/drive_by_wire.html"><strong aria-hidden="true">3.1.1.</strong> Drive by Wire</a></li></ol></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -113,7 +113,7 @@
                     <h1 class="menu-title">Embedded Developer Roadmap</h1>
 
                     <div class="right-buttons">
-                        <a href="print.html" title="Print this book" aria-label="Print this book">
+                        <a href="../print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
                         </a>
 
@@ -142,20 +142,29 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="roadmap-overview"><a class="header" href="#roadmap-overview">Roadmap Overview</a></h1>
-<p><a href="mdbook-plantuml-img/f4f92ef70b58181f6937e81d8ac39bba4d6043db.svg"><img src="mdbook-plantuml-img/f4f92ef70b58181f6937e81d8ac39bba4d6043db.svg" alt="" /></a></p>
-<p>What is the recommended usage of this roadmap?</p>
-<ol>
-<li>Complete the Fundamentals, this is knowledge that will be the pillar for anything you may end up working on as an Embedded Developer and even most of it applies to other engineering branches.</li>
-<li>Select one Track and one Industry that catches your attention and start getting familiarized with the topics inside of both, for example: My goal is to learn about Embedded Software track in the Automotive Industry, If you were to select gateways then you could become proeficient in handling and passing data between two components.</li>
-</ol>
+                        <h1 id="operating-systems"><a class="header" href="#operating-systems">Operating Systems</a></h1>
+<p>The OS is a program that manages a computers resources by offering services(cpu time, memory space via file storage, IO operations). </p>
+<ul>
+<li>Process and threads</li>
+<li>OS interfaces</li>
+<li>Memory management</li>
+</ul>
+<div class="table-wrapper"><table><thead><tr><th style="text-align: center">Resource</th><th style="text-align: center">Description</th><th style="text-align: center">Recomendation</th></tr></thead><tbody>
+<tr><td style="text-align: center"><a href="https://github.com/prakhar1989/awesome-courses"> Operating Systems</a></td><td style="text-align: center">checkout the OS courses in this repo</td><td style="text-align: center"><span class="likebtn-wrapper" data-theme="google" data-counter_frmt="comma"> span</span></td></tr>
+<tr><td style="text-align: center">resource 2</td><td style="text-align: center">description</td><td style="text-align: center">review</td></tr>
+<tr><td style="text-align: center">resource 3</td><td style="text-align: center">description</td><td style="text-align: center">review</td></tr>
+</tbody></table>
+</div><script>(function(d,e,s){if(d.getElementById("likebtn_wjs"))return;a=d.createElement(e);m=d.getElementsByTagName(e)[0];a.async=1;a.id="likebtn_wjs";a.src=s;m.parentNode.insertBefore(a, m)})(document,"script","//w.likebtn.com/js/w/widget.js"); </script>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
+                            <a rel="prev" href="../Fundamentals.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <i class="fa fa-angle-left"></i>
+                            </a>
 
-                            <a rel="next" href="Fundamentals.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="../Fundamentals/digital_systems.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -165,8 +174,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
+                    <a rel="prev" href="../Fundamentals.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <i class="fa fa-angle-left"></i>
+                    </a>
 
-                    <a rel="next" href="Fundamentals.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="../Fundamentals/digital_systems.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
@@ -197,13 +209,13 @@
         </script>
 
 
-        <script src="elasticlunr.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="mark.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="searcher.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../elasticlunr.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../mark.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../searcher.js" type="text/javascript" charset="utf-8"></script>
 
-        <script src="clipboard.min.js" type="text/javascript" charset="utf-8"></script>
-        <script src="highlight.js" type="text/javascript" charset="utf-8"></script>
-        <script src="book.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../clipboard.min.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../highlight.js" type="text/javascript" charset="utf-8"></script>
+        <script src="../book.js" type="text/javascript" charset="utf-8"></script>
 
         <!-- Custom JS scripts -->
 
